fix: fix header padding on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -15,5 +15,6 @@
 @media screen and (max-width: 767px){
   .header{
     max-width: 100%;
+    padding-top: 28px;
   }
 }
